// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`custom nodes can define a custom node built of other custom nodes 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "gain": {
            "inputs": [],
            "value": 1,
          },
          "inputs": [
            {
              "inputs": [
                {
                  "delayTime": {
                    "inputs": [],
                    "value": 0.3333333333333333,
                  },
                  "inputs": [
                    {
                      "gain": {
                        "inputs": [],
                        "value": 0.3333333333333333,
                      },
                      "inputs": [
                        {
                          "delayTime": {
                            "inputs": [],
                            "value": 0.3333333333333333,
                          },
                          "inputs": [
                            {
                              "gain": {
                                "inputs": [],
                                "value": 0.3333333333333333,
                              },
                              "inputs": [
                                "<circular:DelayNode>",
                                {
                                  "detune": {
                                    "inputs": [],
                                    "value": 0,
                                  },
                                  "frequency": {
                                    "inputs": [],
                                    "value": 440,
                                  },
                                  "inputs": [],
                                  "name": "OscillatorNode",
                                  "type": "sine",
                                },
                              ],
                              "name": "GainNode",
                            },
                          ],
                          "name": "DelayNode",
                        },
                      ],
                      "name": "GainNode",
                    },
                  ],
                  "name": "DelayNode",
                },
              ],
              "name": "StereoPannerNode",
              "pan": {
                "inputs": [],
                "value": 1,
              },
            },
            {
              "inputs": [
                {
                  "delayTime": {
                    "inputs": [],
                    "value": 0.3333333333333333,
                  },
                  "inputs": [
                    {
                      "gain": {
                        "inputs": [],
                        "value": 0.3333333333333333,
                      },
                      "inputs": [
                        {
                          "delayTime": {
                            "inputs": [],
                            "value": 0.3333333333333333,
                          },
                          "inputs": [
                            {
                              "gain": {
                                "inputs": [],
                                "value": 0.3333333333333333,
                              },
                              "inputs": [
                                "<circular:DelayNode>",
                              ],
                              "name": "GainNode",
                            },
                          ],
                          "name": "DelayNode",
                        },
                        {
                          "detune": {
                            "inputs": [],
                            "value": 0,
                          },
                          "frequency": {
                            "inputs": [],
                            "value": 440,
                          },
                          "inputs": [],
                          "name": "OscillatorNode",
                          "type": "sine",
                        },
                      ],
                      "name": "GainNode",
                    },
                  ],
                  "name": "DelayNode",
                },
              ],
              "name": "StereoPannerNode",
              "pan": {
                "inputs": [],
                "value": -1,
              },
            },
          ],
          "name": "GainNode",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be removed 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.5,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.5,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                            {
                              "detune": {
                                "inputs": [],
                                "value": 0,
                              },
                              "frequency": {
                                "inputs": [],
                                "value": 440,
                              },
                              "inputs": [],
                              "name": "OscillatorNode",
                              "type": "sine",
                            },
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": 1,
          },
        },
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.5,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.5,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                    {
                      "detune": {
                        "inputs": [],
                        "value": 0,
                      },
                      "frequency": {
                        "inputs": [],
                        "value": 440,
                      },
                      "inputs": [],
                      "name": "OscillatorNode",
                      "type": "sine",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": -1,
          },
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be removed 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be replaced with another on update 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "gain": {
            "inputs": [],
            "value": 0.5,
          },
          "inputs": [
            {
              "detune": {
                "inputs": [],
                "value": 0,
              },
              "frequency": {
                "inputs": [],
                "value": 220,
              },
              "inputs": [],
              "name": "OscillatorNode",
              "type": "square",
            },
            {
              "detune": {
                "inputs": [],
                "value": 3,
              },
              "frequency": {
                "inputs": [],
                "value": 220,
              },
              "inputs": [],
              "name": "OscillatorNode",
              "type": "square",
            },
          ],
          "name": "GainNode",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be replaced with another on update 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "gain": {
            "inputs": [],
            "value": 0.5,
          },
          "inputs": [
            {
              "detune": {
                "inputs": [],
                "value": 0,
              },
              "frequency": {
                "inputs": [],
                "value": 220,
              },
              "inputs": [],
              "name": "OscillatorNode",
              "type": "sine",
            },
          ],
          "name": "GainNode",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be replaced with another on update 3`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "inputs": [
            {
              "gain": {
                "inputs": [],
                "value": 1,
              },
              "inputs": [],
              "name": "GainNode",
            },
          ],
          "name": "ConvolverNode",
          "normalize": true,
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be replaced with another on update 4`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "inputs": [
            {
              "gain": {
                "inputs": [],
                "value": 1,
              },
              "inputs": [],
              "name": "GainNode",
            },
          ],
          "name": "ConvolverNode",
          "normalize": true,
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be updated 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.5,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.5,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                            {
                              "detune": {
                                "inputs": [],
                                "value": 0,
                              },
                              "frequency": {
                                "inputs": [],
                                "value": 440,
                              },
                              "inputs": [],
                              "name": "OscillatorNode",
                              "type": "sine",
                            },
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": 1,
          },
        },
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.5,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.5,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                    {
                      "detune": {
                        "inputs": [],
                        "value": 0,
                      },
                      "frequency": {
                        "inputs": [],
                        "value": 440,
                      },
                      "inputs": [],
                      "name": "OscillatorNode",
                      "type": "sine",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": -1,
          },
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which can be updated 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.6,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.6,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                            {
                              "detune": {
                                "inputs": [],
                                "value": 0,
                              },
                              "frequency": {
                                "inputs": [],
                                "value": 440,
                              },
                              "inputs": [],
                              "name": "OscillatorNode",
                              "type": "sine",
                            },
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": 1,
          },
        },
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.6,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.6,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                    {
                      "detune": {
                        "inputs": [],
                        "value": 0,
                      },
                      "frequency": {
                        "inputs": [],
                        "value": 440,
                      },
                      "inputs": [],
                      "name": "OscillatorNode",
                      "type": "sine",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": -1,
          },
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which has an input node with no params 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "gain": {
            "inputs": [],
            "value": 0.5,
          },
          "inputs": [
            {
              "detune": {
                "inputs": [],
                "value": 0,
              },
              "frequency": {
                "inputs": [],
                "value": 220,
              },
              "inputs": [],
              "name": "OscillatorNode",
              "type": "sine",
            },
          ],
          "name": "GainNode",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes can define a custom node which has an input node with no params and using the string \`input\` instead of the \`INPUT\` identifier for backwards compatibility 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "gain": {
            "inputs": [],
            "value": 0.5,
          },
          "inputs": [
            {
              "detune": {
                "inputs": [],
                "value": 0,
              },
              "frequency": {
                "inputs": [],
                "value": 220,
              },
              "inputs": [],
              "name": "OscillatorNode",
              "type": "sine",
            },
          ],
          "name": "GainNode",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes creates a custom node which can be reused in virtualAudioGraph.update 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.5,
      },
      "inputs": [
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.5,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.5,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                            {
                              "detune": {
                                "inputs": [],
                                "value": 0,
                              },
                              "frequency": {
                                "inputs": [],
                                "value": 440,
                              },
                              "inputs": [],
                              "name": "OscillatorNode",
                              "type": "sine",
                            },
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": 1,
          },
        },
        {
          "inputs": [
            {
              "delayTime": {
                "inputs": [],
                "value": 0.5,
              },
              "inputs": [
                {
                  "gain": {
                    "inputs": [],
                    "value": 0.5,
                  },
                  "inputs": [
                    {
                      "delayTime": {
                        "inputs": [],
                        "value": 0.5,
                      },
                      "inputs": [
                        {
                          "gain": {
                            "inputs": [],
                            "value": 0.5,
                          },
                          "inputs": [
                            "<circular:DelayNode>",
                          ],
                          "name": "GainNode",
                        },
                      ],
                      "name": "DelayNode",
                    },
                    {
                      "detune": {
                        "inputs": [],
                        "value": 0,
                      },
                      "frequency": {
                        "inputs": [],
                        "value": 440,
                      },
                      "inputs": [],
                      "name": "OscillatorNode",
                      "type": "sine",
                    },
                  ],
                  "name": "GainNode",
                },
              ],
              "name": "DelayNode",
            },
          ],
          "name": "StereoPannerNode",
          "pan": {
            "inputs": [],
            "value": -1,
          },
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes updating startTime of nested custom nodes 1`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 1,
      },
      "inputs": [
        {
          "detune": {
            "inputs": [],
            "value": 0,
          },
          "frequency": {
            "inputs": [],
            "value": 440,
          },
          "inputs": [],
          "name": "OscillatorNode",
          "type": "sine",
        },
      ],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes works when the custom node audio graph changes size 1`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;

exports[`custom nodes works when the custom node audio graph changes size 2`] = `
{
  "inputs": [
    {
      "detune": {
        "inputs": [],
        "value": 0,
      },
      "frequency": {
        "inputs": [],
        "value": 440,
      },
      "inputs": [],
      "name": "OscillatorNode",
      "type": "sine",
    },
  ],
  "name": "AudioDestinationNode",
}
`;
